# keras-nlp

./: pyproject.toml  readme.md
keras_nlp/mappings/: word_vectors.py
keras_nlp/preprocessing/: text.py
